<resources>
    <string name="app_name">OpenInApp</string>
    <string name="view_analytics">View Analytics</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_all_links">View all Links</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="todays_clicks">Today\'s clicks</string>
    <string name="top_location">Top Location</string>
    <string name="top_source">Top Source</string>
    <string name="best_time">Best Time</string>
    <string name="link_copied_to_clipboard">Link Copied to Clipboard</string>
</resources>